fixed the load patch function

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -25,7 +25,7 @@
       </div>
       <div id="lfotray">
         <div id="fader">
-          <span class='modparam'>Rate</span><br><input type="range" min="0" max="1" value="0.5" step="0.001" class="vertical" orient="vertical" list="lfo" ng-model="newPatch.slforate">
+          <span class='modparam'>Rate</span><br><input type="range" min="0" max="1" ng-value="currentConfig.slforat" step="0.001" class="vertical" orient="vertical" list="lfo" ng-model="newPatch.slforate">
           <datalist id="lfo">
             <option>0</option>
             <option>0.2</option>
@@ -36,7 +36,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span  class='modparam'>Delay</span><br><input type="range" min="1" max="4" value="2.5" step="0.01" class="vertical" orient="vertical" list="delay" ng-model ="newPatch.slfodelay">
+          <span  class='modparam'>Delay</span><br><input type="range" min="1" max="4" ng-value="currentConfig.slfodelay" step="0.01" class="vertical" orient="vertical" list="delay" ng-model ="newPatch.slfodelay">
           <datalist id="delay">
             <option>1</option>
             <option>1.6</option>
@@ -49,15 +49,16 @@
       </div>
       <div id="patchtray">
         <div id="patchmenu">
-          <select>
-            <option ng-repeat = "patch in patches">{{patch.patch_name}}</option>
+          <select ng-model="desiredSetting">
+            <option ng-repeat = "patch in patches" value="{{patch._id}}">{{patch.patch_name}}</option>
           </select>
+           <button ng-click="currentSetting(desiredSetting)">Load Patch</button>
           <br> <input type="text" value="Patch Name" ng-model="newPatch.patch_name"><br><button type="button" ng-click="createPatch(newPatch)">Save</button>
         </div>
       </div>
       <div id="vcftray">
         <div id="fader">
-          <span class='modparam'>Freq</span><br><input type="range" min="0" max="1" value="0.5" step="0.001" class="vertical" orient="vertical" list="cutoff" ng-model="newPatch.svcffreq">
+          <span class='modparam'>Freq</span><br><input type="range" min="0" max="1" ng-value="currentConfig.svcffreq" step="0.001" class="vertical" orient="vertical" list="cutoff" ng-model="newPatch.svcffreq">
           <datalist id="cutoff">
             <option>0</option>
             <option>0.2</option>
@@ -68,7 +69,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span class='modparam'>Res</span><br><input type="range" min="1" max="4" value="2.5" step="0.01" class="vertical" orient="vertical" list="resonance" ng-model="newPatch.svcfres">
+          <span class='modparam'>Res</span><br><input type="range" min="1" max="4" ng-value="currentConfig.svcfres" step="0.01" class="vertical" orient="vertical" list="resonance" ng-model="newPatch.svcfres">
           <datalist id="resonance">
             <option>1</option>
             <option>1.6</option>
@@ -81,7 +82,7 @@
       </div>
       <div id="adsrtray">
         <div id="fader">
-          <span class='modparam'>ATK</span><br><input type="range" min="0" max="100" value="50" step="0.01" class="vertical" orient="vertical" list="attack" ng-model="newPatch.senvatk">
+          <span class='modparam'>ATK</span><br><input type="range" min="0" max="100" ng-value="currentConfig.senvatk" step="0.01" class="vertical" orient="vertical" list="attack" ng-model="newPatch.senvatk">
           <datalist id="attack">
             <option>0</option>
             <option>20</option>
@@ -92,7 +93,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span class='modparam'>DCY</span><br><input type="range" min="0" max="100" value="50" step="0.01" class="vertical" orient="vertical" list="decay" ng-model="newPatch.senvdcy">
+          <span class='modparam'>DCY</span><br><input type="range" min="0" max="100" ng-value="currentConfig.senvdcy" step="0.01" class="vertical" orient="vertical" list="decay" ng-model="newPatch.senvdcy">
           <datalist id="decay">
             <option>0</option>
             <option>20</option>
@@ -103,7 +104,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span class='modparam'>SUS</span><br><input type="range" min="0" max="100" value="50" step="0.01" class="vertical" orient="vertical" list="sustain" ng-model="newPatch.senvsus">
+          <span class='modparam'>SUS</span><br><input type="range" min="0" max="100" ng-value="currentConfig.senvsus" step="0.01" class="vertical" orient="vertical" list="sustain" ng-model="newPatch.senvsus">
           <datalist id="sustain">
             <option>0</option>
             <option>20</option>
@@ -114,7 +115,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span class='modparam'>RLS</span><br><input type="range" min="0" max="100" value="50" step="0.01" class="vertical" orient="vertical" list="release" ng-model="newPatch.senvrls">
+          <span class='modparam'>RLS</span><br><input type="range" min="0" max="100" ng-value="currentConfig.senvrls" step="0.01" class="vertical" orient="vertical" list="release" ng-model="newPatch.senvrls">
           <datalist id="release">
             <option>0</option>
             <option>20</option>
@@ -134,7 +135,7 @@
       <div id="hpftray">
         <div id="fader">
           <span class="modparam">Freq</span><br>
-          <input type="range" min="0" max="100" value="50" step="20" class="vertical" orient="vertical" list="vca" ng-model="newPatch.shpffreq">
+          <input type="range" min="0" max="100" ng-value="currentConfig.shpffreq" step="20" class="vertical" orient="vertical" list="vca" ng-model="newPatch.shpffreq">
           <datalist id="vca">
             <option>0</option>
             <option>20</option>
@@ -148,7 +149,7 @@
       <div id="vcatray">
           <div id="fader">
             <span class="modparam">Level</span><br>
-            <input type="range" min="0" max="100" value="50" step="0.01" class="vertical" orient="vertical" list="vca" ng-model="newPatch.svcalevel">
+            <input type="range" min="0" max="100" ng-value="currentConfig.svcalevel" step="0.01" class="vertical" orient="vertical" list="vca" ng-model="newPatch.svcalevel">
             <datalist id="vca">
               <option>0</option>
               <option>20</option>
